added unit testing

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-    <h1>אתר המלצות של איתי</h1>
+    <h1>itay's recommendation site</h1>
     <form action="/add" method="post">
         <label for="user_id">מזהה משתמש:</label>
         <input type="text" id="user_id" name="user_id" required>
